--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
+      <img src="assets/img/logo.png" alt="" class="img-fluid rounded-circle">
       <h1>J Alfredo Dzul Hau</h1>
       <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
     </div>
@@ -88,7 +89,7 @@
 
         <div class="section-title">
           <h2>Acerca</h2>
-          <p>Me llamo Jose Alfredo Dzul Hau y me encanta implementar estrategias optimas con conocimientos científicos y tecnológicos para el análisis, la gestión de servicios y la identificación de necesidades de seguridad en Tecnologías de la Información asi cómo también ofrecer soluciones basadas en normas, marcos de referencia, estándares de calidad y seguridad vigentes que contribuyan a la productividad y el logro de los objetivos estratégicos de las organizaciones públicas y privadas, desempeñando profesionalmente ética en un contexto multicultural, comprometidos con la sociedad y conservación del medio ambiente.</p>
+          <p>Me llamo Jose Alfredo Dzul Hau y soy informático apasionado de brindar estrategias optimas con conocimientos científicos y tecnológicos para el análisis, la gestión de servicios y la identificación de necesidades de seguridad en Tecnologías de la Información asi cómo también ofrecer soluciones basadas en normas, marcos de referencia, estándares de calidad y seguridad vigentes que contribuyan a la productividad y el logro de los objetivos estratégicos de las organizaciones públicas y privadas, desempeñando profesionalmente ética en un contexto multicultural, comprometidos con la sociedad y conservación del medio ambiente.</p>
           <BR>  
 
           <p>De igual manera impartó actividades de auditoría y consultoría relacionadas con la función informática, seleccionando y utilizando de manera óptima técnicas y herramientas computacionales actuales, así como emergentes, además de identificar y aplicar modelos pertinentes en el diseño e implementación de base de datos y redes de comunicación.</p>
@@ -96,19 +97,16 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/Diseño.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Ingeniero en Informática &amp; Web Developer.</h3>
             <p class="font-italic">
-              Cargos: <BR>
-              Desarrollador de aplicaciones para móviles · Desarrollo web · Ingeniero de pruebas · Administrador de servicio de TI · Especialista en seguridad de red <BR>
+              Aspiraciones: <BR>
+              Desarrollador de aplicaciones para móviles · Desarrollo web · Ingeniero de pruebas · Administrador de servicios de TI · Especialista en seguridad de red <BR>
 
-              Ubicaciones de empleo:<BR>
+              Disponible para:<BR>
               Calkiní, Campeche, Mexico · Cancún, Quintana Roo,  Mexico · Monterrey, Nuevo León· Estados Unidos · Mérida, Yucatán<BR>
-
-              Fecha de inicio:<BR>
-              Flexible, estoy mirando a ver qué ofertas hay <BR>
 
               Tipos de empleo:<BR>
               Jornada completa · A distancia · Contrato · Prácticas · Temporal.
@@ -125,9 +123,9 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Edad:</strong> 22 años</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Master</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Licenciatura:</strong> Ing.Informática</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> JAlfredoDzulHau@gmail.com</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Disponible</li>
                 </ul>
               </div>
             </div>
@@ -260,23 +258,34 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Habilidades: <BR><BR>
-            ● Emprendimiento
-            ● Puntualidad
-            ● Actitud positiva 
-            ● Comunicación efectiva
-            ● Responsabilidad <BR>
-            ● Proactivo
-            ● Respeto
-            ● Enfoque a resultados
-            ● Manejo de relaciones
-            ● Liderazgo de equipos <BR>
-            ● Trabajo en equipo 
-            ● Empatía
-            ● Adaptabilidad
-            ● Honesto
-            ● Trabajo bajo presión
-          </p>
+          <h3 class="resume-title">Habilidades:</h3><BR>
+
+
+          <div class="row">
+              <div class="col-lg-6">
+                <ul>
+                  <li><i class="icofont-rounded-right"></i> <strong>Emprendimiento</strong></li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Puntualidad</strong></li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Actitud positiva</strong></li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Comunicación efectiva</strong></li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Responsabilidad</strong></li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Proactivo</strong></li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Respeto</strong></li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Enfoque a resultados</strong></li>
+                </ul>
+              </div>
+              <div class="col-lg-6">
+                <ul>
+                  <li><i class="icofont-rounded-right"></i> <strong>Manejo de relaciones</strong></li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Liderazgo de equipos</strong></li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Trabajo en equipo </strong></li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Empatía</strong></li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Adaptabilidad</strong></li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Honesto</strong></li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Trabajo bajo presión</strong></li>
+                </ul>
+              </div>
+            </div>
         </div>
 
         <div class="row">
@@ -284,7 +293,7 @@
             <h3 class="resume-title">Resume</h3>
             <div class="resume-item pb-0">
               <h4>Jose Alfredo Dzul Hau</h4>
-              <p><em>Informático innovador e impulsado por plazos con más de 3 años de experiencia en el desarrollo y gestión de software de TI.</em></p>
+              <p><em>Informático innovador e impulsado por el amor hacia mi profesión con más de 3 años de experiencia en el desarrollo y gestión de software de TI.</em></p>
               <ul>
                 <li>Calkiní, Campeche</li>
                 <li>(52) 996-109-58-64</li>
@@ -296,7 +305,7 @@
             <div class="resume-item">
               <h4>INSTITUTO TECNOLÓGICO SUPERIOR DE CALKINÍ EN EL ESTADO DE CAMPECHE (ITESCAM)</h4>
               <h5>2016 - 2021</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+              <p><em>Calkiní, Campeche</em></p>
               <p>Licenciatura Ingeniería informática <BR>Promedio de Aprovechamiento: 9.3</p>
               <BR>
               <p>Beca de Estimulo al Alto Rendimiento 2016, Beca Fundación TELMEX TELCEL y Beca Fundación Pablo García.</p>
@@ -304,9 +313,20 @@
             <div class="resume-item">
               <h4>CENTRO DE BACHILLERATO TECNOLÓGICO INDUSTRIAL Y DE SERVICIOS N° 126 "JOSÉ MARÍA MORELOS Y PAVÓN"</h4>
               <h5>2014 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+              <p><em>Calkiní, Campeche</em></p>
               <p>Bachillerato MANTENIMIENTO DE EQUIPO DE COMPUTO<BR>Promedio de Aprovechamiento: 9.3</p>
             </div>
+
+             <h3 class="resume-title">Idioma</h3>
+            <div class="resume-item">
+              <h4>A lo largo de mi desarrollo y crecimiento profesional he aprensido las siguientes lenguas: </h4>
+              <h5>2016 - 2021</h5>
+              <p><em></em></p>
+              <p>● Inglés: Intermedio </p>
+              <p>● Español: Nativo</p>
+              <p>● Maya: Nativo </p>
+            </div>
+
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Experiencia Profesional</h3>
@@ -322,16 +342,34 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Facilitador del Programa Cuantrix Televisa</h4>
+              <h5> 2018 – jun. de 2019 </h5>
+              <p><em>ESCUELA PRIMARIA VENUSTIANO CARRANZA <BR>Ciencia y Tecnología</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Implemente cursos de programación a niños de 5° y 6° grado de primaria, en dónde abarque temas cómo: ¿Qué es programación?, ¿Cómo crear algoritmos? y ¿Cómo brindar posibles soluciones a problemas? .</li>
+                <li>Gestione plataformas de programación para niños, entre las más importante Scratch.</li>
+                <li>Cree estrategias de enseñanza para facilitar los conceptos del área de programación.</li>
+                <li>Implementre estrategias para trabajar  con cada unos de los juegos sin necesidad de una conexión a internet.</li>
               </ul>
             </div>
+
+            <h3 class="resume-title">Cursos</h3>
+            <div class="resume-item">
+              <h4>He tomado diversos cursos de distintas tematicas entre ellas destacan: </h4>
+              <h5>2016 - 2021</h5>
+              <p><em></em></p>
+              <p>● Microsoft IT Academy (Mantenimiento de Equipo de Computo) </p>
+              <p>● Microsoft IT Academy (Microsoft Word, Powert Point y Excel) </p>
+              <p>● ASUME “Superación por mi país” </p>
+              <p>● Cuantrix Televisa </p>
+              <p>● Tips de cómo hablar en público </p>
+              <p>● Tips de cómo aprovechar tu tiempo sin procrastinar </p>
+              <p>● Cómo crear tu página web </p>
+              <p>● Computación básica </p>
+              <p>● Internet de las cosas (IoT) </p>
+              <p>● Inteligencia emocional </p>
+            </div>
+
           </div>
         </div>
 
@@ -461,38 +499,38 @@
 
         <div class="section-title">
           <h2>Servicios</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Actualmente sigo obteniendo experiencia (prueba y error) de aprendizaje brindando distintos servicios que me forjan como profesionista.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="icofont-computer"></i></div>
-            <h4 class="title"><a href="">Lorem Ipsum</a></h4>
+            <h4 class="title"><a href="">Testing</a></h4>
             <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="icofont-chart-bar-graph"></i></div>
-            <h4 class="title"><a href="">Dolor Sitema</a></h4>
+            <h4 class="title"><a href="">Web developer</a></h4>
             <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="icofont-earth"></i></div>
-            <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
+            <h4 class="title"><a href="">Mobile app developer</a></h4>
             <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
             <div class="icon"><i class="icofont-image"></i></div>
-            <h4 class="title"><a href="">Magni Dolores</a></h4>
+            <h4 class="title"><a href="">Administración de servidores</a></h4>
             <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="icofont-settings"></i></div>
-            <h4 class="title"><a href="">Nemo Enim</a></h4>
+            <h4 class="title"><a href="">Seguridad en redes</a></h4>
             <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
             <div class="icon"><i class="icofont-tasks-alt"></i></div>
-            <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
+            <h4 class="title"><a href="">Administración de BD</a></h4>
             <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
           </div>
         </div>
@@ -612,12 +650,12 @@
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="form-row">
                 <div class="form-group col-md-6">
-                  <label for="name">Your Name</label>
+                  <label for="name">Nombre</label>
                   <input type="text" name="name" class="form-control" id="name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                   <div class="validate"></div>
                 </div>
                 <div class="form-group col-md-6">
-                  <label for="name">Your Email</label>
+                  <label for="name">Email</label>
                   <input type="email" class="form-control" name="email" id="email" data-rule="email" data-msg="Please enter a valid email" />
                   <div class="validate"></div>
                 </div>
@@ -628,7 +666,7 @@
                 <div class="validate"></div>
               </div>
               <div class="form-group">
-                <label for="name">Message</label>
+                <label for="name">Mensaje</label>
                 <textarea class="form-control" name="message" rows="10" data-rule="required" data-msg="Please write something for us"></textarea>
                 <div class="validate"></div>
               </div>
@@ -637,7 +675,7 @@
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center"><button type="submit">Enviar mensaje</button></div>
             </form>
           </div>
 
