Actualización de mi pagina web

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>iPortfolio Bootstrap Template - Index</title>
+  <title>AlfreWebDeveloper - Index</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -48,11 +48,11 @@
         <img src="assets/img/perfil.png" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Jose Alfredo Dzul Hau</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://twitter.com/jalfredo_dh10" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=100015095191674" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.instagram.com/jalfredodzulhau/" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.youtube.com/watch?v=cy0cspobcQU" class="google-plus"><i class="bx bxl-youtube"></i></a>
+          <a href="linkedin.com/in/josealfredodzulhau" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -382,7 +382,7 @@
 
         <div class="section-title">
           <h2>Portafolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Algunos de mis trabajos y proyectos que he desarrollado son los que me han ayudado a desarrollarme crecer profesionalmente.</p>
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -504,34 +504,34 @@
 
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
-            <div class="icon"><i class="icofont-computer"></i></div>
+            <div class="icon"><i class="icofont-checked"></i></div>
             <h4 class="title"><a href="">Testing</a></h4>
-            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+            <p class="description">Mi objetivo es que el sistema falle y buscar los errores que sean necesarios para asegurar la calidad del software</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon"><i class="icofont-chart-bar-graph"></i></div>
+            <div class="icon"><i class="icofont-web"></i></div>
             <h4 class="title"><a href="">Web developer</a></h4>
-            <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+            <p class="description">Programación, diseño y desarrollo de sitios web específicos para la empresa y creación y administración de bases de datos vinculadas a esas webs</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon"><i class="icofont-earth"></i></div>
+            <div class="icon"><i class="icofont-ui-touch-phone"></i></div>
             <h4 class="title"><a href="">Mobile app developer</a></h4>
-            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+            <p class="description">Resolver problemas a través de aplicaciones y/o plataformas móviles, diseñar interfaces sencillas de entender, programar y analizar y corregir problemas de las aplicaciones </p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon"><i class="icofont-image"></i></div>
+            <div class="icon"><i class="icofont-server"></i></div>
             <h4 class="title"><a href="">Administración de servidores</a></h4>
-            <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+            <p class="description"> Gestionar el sistema operativo del servidor, mantener la integridad del rendimiento del servidor, instalar y configurar el software nuevo y las actualizaciones, solucionar problemas y actualizar la información de cuentas de usuario (añadir/eliminar usuarios y restablecer contraseñas). También se realizan copias de seguridad de rutina; integrar las nuevas tecnologías; gestionar redes; y aplicar las actualizaciones, revisiones y cambios de configuración para el sistema operativo</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon"><i class="icofont-settings"></i></div>
+            <div class="icon"><i class="icofont-network"></i></div>
             <h4 class="title"><a href="">Seguridad en redes</a></h4>
-            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+            <p class="description">Identificar los requerimientos de normativas, servicios o software necesarios para implementar, mejorar y garantizar la eficacia del protocolo de seguridad informática, garantizando la integridad, la confidencialidad y la protección de todos los activos de la empresa a nivel tecnológico.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon"><i class="icofont-tasks-alt"></i></div>
+            <div class="icon"><i class="icofont-database"></i></div>
             <h4 class="title"><a href="">Administración de BD</a></h4>
-            <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+            <p class="description">Manejo, mantenimiento, desempeño y de la confiabilidad de bases de datos. Asimismo, nos encargamos de la mejora y diseño de nuevos modelos de las mismas.</p>
           </div>
         </div>
 
@@ -615,7 +615,7 @@
 
         <div class="section-title">
           <h2>Contacto</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Si te gustaria conocer más a cerca de mi puedes incoporarme si gustas en tu empresas para que trabajemos y hagamos crecer tu negocio juntos implementado nuevas tecnologias de punta y si existe un puesto o vacante en tu organización puedes consultar mi CV que dejo aquí en el apartado de Contacto. Sin mas por el momento gracias por leer mi portafolio de vida mi estimado lector.</p>
         </div>
 
         <div class="row" data-aos="fade-in">
@@ -636,9 +636,15 @@
               </div>
 
               <div class="phone">
-                <i class="icofont-phone"></i>
+                <i class="icofont-whatsapp"></i>
                 <h4>Teléfono:</h4>
                 <p>+52 996 109 58 64</p>
+              </div>
+
+              <div class="phone">
+                <a href="https://drive.google.com/file/d/1yJaR8305Xq2NWNeMn0fIeioIp3P4WnEa/view?usp=sharing"> <i class="icofont-file-pdf"></i></a>
+                <h4>CV:</h4>
+                <p>Curriculum Vitae</p>
               </div>
 
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3740.343406175854!2d-90.06057038575541!3d20.36872611535926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85f880dce2918f09%3A0x8109de942c6f80b4!2sCalle%2028%204540%2C%20Kilak%C3%A1n%2C%2024904%20Calkin%C3%AD%2C%20Camp.!5e0!3m2!1ses-419!2smx!4v1599723618452!5m2!1ses-419!2smx" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
@@ -690,14 +696,14 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
+        &copy; Copyright <strong><span>AlfreWebDeveloper </span></strong>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://bootstrapmade.com/">Jose Alfredo Dzul Hau</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
