--- a/inner-page.html
+++ b/inner-page.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Inner Page - iPortfolio Bootstrap Template</title>
+  <title>Inner Page - AlfreWebDeveloper</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -45,8 +45,8 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Alex Smith</a></h1>
+        <img src="assets/img/perfil.png" alt="" class="img-fluid rounded-circle">
+        <h1 class="text-light"><a href="index.html">Jose Alfredo Dzul Hau</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -58,12 +58,12 @@
 
       <nav class="nav-menu">
         <ul>
-          <li><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li>
-          <li><a href="#services"><i class="bx bx-server"></i> Services</a></li>
-          <li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li>
+          <li><a href="index.html"><i class="bx bx-home"></i> <span>Inicio</span></a></li>
+          <li><a href="#about"><i class="bx bx-user"></i> <span>Acerca</span></a></li>
+          <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resumen</span></a></li>
+          <li><a href="#portfolio"><i class="bx bx-book-content"></i> Portafolio</a></li>
+          <li><a href="#services"><i class="bx bx-server"></i> Servicios</a></li>
+          <li><a href="#contact"><i class="bx bx-envelope"></i> Contacto</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -81,7 +81,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>Inner Page</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li>Inner Page</li>
           </ol>
         </div>
@@ -103,14 +103,14 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
+        &copy; Copyright <strong><span>AlfreWebDeveloper</span></strong>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://bootstrapmade.com/">Jose Alfredo Dzul Hau</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
