Actualizacion del commit de mi pagina web

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
     <div class="hero-container" data-aos="fade-in">
       <img src="assets/img/logo.png" alt="" class="img-fluid rounded-circle">
       <h1>J Alfredo Dzul Hau</h1>
-      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Network security, Web Developer, Mobile app developer, 
+      Server Admin, Database administrator, Freelancer, Tester"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -115,7 +116,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Fecha de Nacimiento:</strong> 16 Jul 1998</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Sitio Web:</strong> www.example.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Sitio Web:</strong> https://jalfredodzulhau.github.io/<BR>AlfreWebDeveloper/</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Teléfono Cel:</strong> +52 996 109 58 64</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Ciudad:</strong> Calkiní, Campeche, México</li>
                 </ul>
@@ -392,6 +393,7 @@
               <li data-filter=".filter-app">App</li>
               <li data-filter=".filter-card">Card</li>
               <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-certificados">Certificados</li>
             </ul>
           </div>
         </div>
@@ -484,6 +486,27 @@
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="col-lg-4 col-md-7 portfolio-item filter-certificados">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portafolio-10.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portafolio-10.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details1.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-8 portfolio-item filter-certificados">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-11.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-11.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details2.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
