Actualización de mi commit de mi pagina web

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 
       <div class="profile">
         <img src="assets/img/perfil.png" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Jose Alfredo Dzul Hau</a></h1>
+        <center><h1 class="text-light"><a href="index.html">Jose Alfredo <BR> Dzul Hau</a></h1></center>
+        <center><p style="color: white;">"Sí lo puedes visualizar en tu mente, lo puedes tener en tus manos"</p></center>
+
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/jalfredo_dh10" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://www.facebook.com/profile.php?id=100015095191674" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -383,7 +385,7 @@
 
         <div class="section-title">
           <h2>Portafolio</h2>
-          <p>Algunos de mis trabajos y proyectos que he desarrollado son los que me han ayudado a desarrollarme crecer profesionalmente.</p>
+          <p>Algunos de mis trabajos y proyectos que he desarrollado son los que me han ayudado a desarrollarme y crecer profesionalmente.</p>
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -522,7 +524,7 @@
 
         <div class="section-title">
           <h2>Servicios</h2>
-          <p>Actualmente sigo obteniendo experiencia (prueba y error) de aprendizaje brindando distintos servicios que me forjan como profesionista.</p>
+          <p>Actualmente sigo obteniendo experiencia de aprendizaje brindando distintos servicios que me forjan como profesionista.</p>
         </div>
 
         <div class="row">
