Actualización de mi pagina jalfredodzulhau.systems

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>AlfreWebDeveloper - Index</title>
+  <title>jalfredodzulhau.systems - Index</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -103,7 +103,7 @@
             <img src="assets/img/Diseño.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Ingeniero en Informática &amp; Web Developer.</h3>
+            <h3>Ingeniero en Informática</h3>
             <p class="font-italic">
               Aspiraciones: <BR>
               Desarrollador de aplicaciones para móviles · Desarrollo web · Ingeniero de pruebas · Administrador de servicios de TI · Especialista en seguridad de red <BR>
@@ -721,7 +721,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>AlfreWebDeveloper </span></strong>
+        &copy; Copyright <strong><span>jalfredodzulhau.systems </span></strong>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
