--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portafolio Detalles - AlfreWebDeveloper</title>
+  <title>Portafolio Detalles - jalfredodzulhau.systems</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -129,7 +129,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>AlfreWebDeveloper</span></strong>
+        &copy; Copyright <strong><span>jalfredodzulhau.systems</span></strong>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
