--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
           <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span>Inicio</span></a></li>
           <li><a href="#about"><i class="bx bx-user"></i> <span>Acerca</span></a></li>
           <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resumen</span></a></li>
-          <li><a href="#portfolio"><i class="bx bx-book-content"></i> Portafolio</a></li>
-          <li><a href="#services"><i class="bx bx-server"></i> Servicios</a></li>
-          <li><a href="#contact"><i class="bx bx-envelope"></i> Contacto</a></li>
+          <li><a href="#portfolio"><i class="bx bx-book-content"></i><span> Portafolio</span></a></li>
+          <li><a href="#services"><i class="bx bx-server"></i><span> Servicios</span></a></li>
+          <li><a href="#contact"><i class="bx bx-envelope"></i><span> Contacto</span></a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -118,7 +118,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Fecha de Nacimiento:</strong> 16 Jul 1998</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Sitio Web:</strong> https://jalfredodzulhau.github.io/<BR>AlfreWebDeveloper/</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Sitio Web:</strong> https://jalfredodzulhau.systems</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Teléfono Cel:</strong> +52 996 109 58 64</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Ciudad:</strong> Calkiní, Campeche, México</li>
                 </ul>
